# podflix

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.services.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: doc.yml  docker_push.yml  lint.yml  test.yml
chainlit/custom_element/: index.html
configs/chainlit/: chainlit.md
configs/chainlit/.chainlit/: config.toml
configs/chainlit/.chainlit/translations/: bn.json  en-US.json  gu.json  he-IL.json  hi.json  ja.json  kn.json  ml.json  mr.json  ta.json  te.json  tr-TR.json  tr.json  zh-CN.json
configs/chainlit/public/: copilot.css  custom.css  theme.json
configs/chainlit/public/elements/: AudioWithTranscript.jsx  VideoWithTranscript.jsx
docker/: Dockerfile  entrypoint.sh
docs/: index.md  reference.md  steps.md
docs/chainlit/: custom_element.md  steps.md
docs/fasthtml/: llms-ctx.txt
explanation/: index.html
how-to-guides/: index.html
notebooks/: test_aws_s3_client.ipynb  test_graph.ipynb  test_langfuse.ipynb  test_model.ipynb  test_whisper.ipynb  test_youtube.ipynb
public/: custom.css
reference/: index.html
scripts/: create_s3_bucket.sh  create_ssl_cert.sh
search/: search_index.json
src/podflix/: __init__.py  env_settings.py  graph.py  placeholder.py  ui.py
src/podflix/db/: __init__.py  db_factory.py  db_manager.py  drop_db.py  drop_db.sql  init_db.py  init_db.sql  init_db_jsonb.sql  s3_storage_client.py
src/podflix/graph/: __init__.py  mock.py  podcast_rag.py
src/podflix/gui/: __init__.py  audio.py  backend.py  base_chat.py  main.py  mock.py
src/podflix/gui/copilot/: app.py
src/podflix/gui/fasthtml_ui/: copilot.py  home.py
src/podflix/utils/: chainlit_ui.py  general.py  graph_runner.py  hf_related.py  model.py  patch_chainlit.py  pydantic_models.py  youtube.py
src/podflix/utils/chainlit_utils/: auth_provider.py  data_layer.py  general.py  patch_chainlit.py  setting_widgets.py
steps/: index.html
tests/: test_placeholder.py
tests/utils/chainlit_utils/: test_auth_provider.py
tutorials/: index.html
